new logos and icons added

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,8 +10,9 @@
         android:id="@+id/splashScreenImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="visible"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_splash_v1" />
+        android:src="@drawable/ic_futura_splash" />
 
 <!--    <ImageView
         android:id="@+id/SplashScreenImage"
