--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitStart"
-            android:src="@drawable/ic_login"
+            android:id="@+id/loginBg"
+            android:src="@drawable/ic_futura_login"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,7 +35,7 @@
                 android:layout_marginTop="@dimen/_15sdp"
                 android:text="@string/welcome_back"
                 android:textAlignment="center"
-                android:textColor="@color/umr_purple"
+                android:textColor="@color/redtext"
                 android:textSize="@dimen/_18sdp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
