Camera issue fixed profile avatar image not showing issue fixed Back button not showing issue fixed "your are offline " text removed Alignment issues in learn module home screen.

--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -67,7 +67,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/subjectsRecycler"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     app:spanCount="3"
                     android:background="#3CECECEC"
