--- a/app/src/main/res/layout/activity_subjects.xml
+++ b/app/src/main/res/layout/activity_subjects.xml
@@ -2,21 +2,24 @@
 <androidx.appcompat.widget.LinearLayoutCompat
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_6sdp"
     android:orientation="vertical">
 
 <com.google.android.material.card.MaterialCardView
     android:id="@+id/cardsubject"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
+    android:layout_gravity="center"
+    android:layout_margin="@dimen/_6sdp"
+
     app:cardCornerRadius="@dimen/_12sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:padding="@dimen/_5sdp">
 
         <ImageView
@@ -31,15 +34,17 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/subjectTxt"
-            android:layout_width="@dimen/_60sdp"
+            android:layout_width="wrap_content"
             android:gravity="center"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_bold"
             android:textAlignment="center"
-            android:paddingStart="@dimen/_2sdp"
-            android:paddingEnd="@dimen/_2sdp"
-            android:textSize="@dimen/_10sdp"
+            android:paddingStart="@dimen/_1sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            android:textSize="@dimen/_9sdp"
             android:text="@string/app_name"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textColorHighlight="@color/new_blue_dark"
             android:defaultFocusHighlightEnabled="true"
             app:layout_constraintEnd_toEndOf="@id/subjectimg"
