--- a/app/src/main/res/layout/layout_toolbar_custom.xml
+++ b/app/src/main/res/layout/layout_toolbar_custom.xml
@@ -13,32 +13,34 @@
         android:scaleType="fitXY"
         android:layout_centerVertical="true"
         android:id="@+id/logoTool"/>-->
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:id="@+id/logoTool"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
-        app:cardBackgroundColor="@android:color/white"
-        app:cardCornerRadius="250dp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        app:cardElevation="@dimen/_2sdp">
+        android:layout_margin="2dp"
+        android:elevation="@dimen/_5sdp"
+        android:background="@drawable/bg_circle_action"
+        android:layout_marginEnd="@dimen/_10sdp">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:id="@+id/image"
+            android:padding="@dimen/_5sdp"
             android:scaleType="centerCrop"
             android:src="@drawable/profile_placeholder" />
 
-    </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/userNameTool"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/logoTool"
-        android:text="Hi Tina,"
-        android:textColor="@color/greytext"
         android:fontFamily="@font/roboto_bold"
-        android:id="@+id/userNameTool"/>
+        android:paddingStart="@dimen/_5sdp"
+        android:text="Hi Tina,"
+        android:textColor="@color/text_color" />
 
     <Spinner
         android:layout_width="wrap_content"
